--- a/Create-Dynamic-table/index.html
+++ b/Create-Dynamic-table/index.html
@@ -11,26 +11,27 @@
 
 <body>
 
-  <div class="main-wrapper d-flex justify-content-center align-item-center">
+
     <div class="table-wrapper ">
       <h1> DYNAMIC <span class="btn-red">TABLE</span></h1>
-      <div class="input-div d-flex justify-content-center align-item-center">
-        <button type="button" class="add-button" name="add-button-text"> add</button>
-
-        <form> <input type="text" name="search" id="myInput" onkeyup="myFunction()">
-          <button type="button">SEARCH</button>
-        </form>
+      <div class="input-div">
+        <div> <button type="button" class="add-button" name="add-button-text"> add</button></div> 
+        <div>
+          <form> <input type="text" name="search" id="myInput" onkeyup="myFunction()">
+            <button type="button">SEARCH</button>
+          </form>
+        </div>
+        
       </div>
-
-      <div class="contain-table d-flex justify-content-center align-item-center">
 
         <div style="overflow-x:auto;">
           <table id="myTable">
             <thead>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Age</th>
-              <th>Gender</th>
+              <th>id</th>
+              <th>name</th>
+              <th>username</th>
+              <th>email</th>
+              
             </thead>
             <tbody class="table-body">
               <tr>
@@ -38,10 +39,8 @@
             </tbody>
 
           </table>
-          <div class="no-record-found" style="color: red; font-size: 30px; text-align: center; display: none;">No-Record-Found</div>
+          <div class=" none-record" style="color: red; font-size: 30px; text-align: center;">No-Record-Found</div>
         </div>
-
-      </div>
       <div class="popup none  ">
         <form>
           <label for="fname">First Name</label>
