complte dynamice table

--- a/Create-Dynamic-table/index.html
+++ b/Create-Dynamic-table/index.html
@@ -30,7 +30,8 @@
               <th>id</th>
               <th>name</th>
               <th>username</th>
-              <th>email</th>
+              <th>email</th> <th>city</th>
+              <th>street</th>
               
             </thead>
             <tbody class="table-body">
@@ -39,7 +40,7 @@
             </tbody>
 
           </table>
-          <div class=" none-record" style="color: red; font-size: 30px; text-align: center;">No-Record-Found</div>
+          <div class="none-record none" style="color: red; font-size: 30px; text-align: center;">No-Record-Found</div>
         </div>
       <div class="popup none  ">
         <form>
