--- a/Dashbord-22.08.2022/index.html
+++ b/Dashbord-22.08.2022/index.html
@@ -46,7 +46,6 @@
         <!-- section -->
 
         <!-- <input type="checkbox" id="toggleSideBar" /> -->
-        <div class=" overflow-hidden">
         <div class="navigation">
 
             <ul>
@@ -91,7 +90,7 @@
 
         </div>
         <!-- main containt section -->
-        <div class="main overflow-hidden">
+        <div class="main">
             <!-- cards -->
             <div class="row">
                 <div class="card-wraper">
@@ -173,7 +172,7 @@
 
         </div>
     </div>
-    </div>
+
 
 
         <script src="assets/js/javascript.js"></script>
