--- a/Bootstrap-02.09.2022/index.html
+++ b/Bootstrap-02.09.2022/index.html
@@ -108,7 +108,8 @@
       <main class="flex-grow-1 d-flex border p-2 h-25">
         <!-- left content -->
         <div class="flex-grow-1 p-lg-4 overflow-auto">
-          
+           <h4 class="text-balck">Dashbord</h4>
+           <h6 class="text-secondary pt-2 pb-2"> Hello Rayn Checkout out whats  happeing today</h6>
           <div class="row g-4">
             <div class="col-12 col-lg-12 card d-flex align-items-center justify-content-between p-2">
               <div class="d-flex align-items-center">
