--- a/Bootstrap-02.09.2022/index.html
+++ b/Bootstrap-02.09.2022/index.html
@@ -59,13 +59,13 @@
         </li>
         <li class="nav-item p-2">
           <a class="nav-link d-flex flex-column align-items-center" href="#">
-            <span class="nav-icon  icon-size  text-secondary fas fa-regular fa-gauge-high p-2  pt-4"></span>
+            <span class="nav-icon  icon-size  text-secondary  fas fa-light fa-gauge p-2  pt-4"></span>
             <span class="text-secondary">Notification</span>
           </a>
         </li>
         <li class="nav-item p-2">
           <a class="nav-link d-flex flex-column align-items-center" href="#">
-            <span class="nav-icon icon-size text-secondary fa-solid fa-gear p-2  pt-4"></span>
+            <span class="nav-icon icon-size text-secondary fas fa-light fa-gauge p-2  pt-4"></span>
             <span class="text-secondary">Settings</span>
           </a>
         </li>
@@ -105,7 +105,7 @@
         </nav>
       </header>
       <!-- main content  -->
-      <main class="flex-grow-1 d-flex border p-2 h-25">
+      <main class="flex-grow-1 d-flex border p-2 ">
         <!-- left content -->
         <div class="flex-grow-1 p-lg-4 overflow-auto">
            <h4 class="text-balck">Dashbord</h4>
