--- a/bootstrap-assesment-task/index.html
+++ b/bootstrap-assesment-task/index.html
@@ -19,11 +19,11 @@
   <!-- <div class=" container-fluid d-flex h-100"> -->
     <div class=" d-flex h-100">
     <!--=========================== left navigation ===================================-->
-    <aside>
+    <aside class="d-flex flex-column flex-grow-1">
       <ul class="nav d-flex flex-column overflow-auto">
         <li class="nav-item ">
           <a class="nav-link my-4  d-flex align-items-center" href="#">
-            <span class="fa-2x pe-2   fa-regular fa-heart text-primary"></span>
+            <span class="fa-2x pe-2 ms-4  fa-regular fa-heart text-primary"></span>
             <h6 class=" pt-2 text-secondary d-none d-sm-block d-lg-block" >F I T T L E</h6>
           </a>
         </li>
@@ -115,7 +115,7 @@
       <main class="flex-grow-1 p-4 h-100">
         <!---======================= dashbord-details 2 card ===========================-->
         <div class=" flex-grow-1 ">
-        <div class="row g-4 ">
+        <div class="row g-4 overflow-auto" style="height:840px">
           <!-- dashbord-details -->
           <div class="col-12">
             <h5>Dashboard</h5>
@@ -158,7 +158,7 @@
               <table class="table  ">
                 <thead class="card">
                   <tr>
-                    <th >
+                    <th class="position-sticky top-0 bg-white">
                       <div class="d-flex  justify-content-between p-2">
                         <div class="card-header ">
                           <h6 class="text-secondary">New Brisbane instructors+02</h6>
@@ -256,7 +256,7 @@
               <table class="table  ">
                 <thead class="card">
                   <tr>
-                    <th class="" >
+                    <th class="position-sticky top-0 bg-white" >
                       <div class="header d-flex header justify-content-between p-2" >
                         <div class="card-header ">
                           <h6 class="text-secondary">New Brisbane instructors+02</h6>
