--- a/bootstrap-assesment-tasks/index.html
+++ b/bootstrap-assesment-tasks/index.html
@@ -125,7 +125,7 @@
         <div class="row g-4 p-3">
           <!-- ===================================dashbord-details =========================-->
           <!-- first column -->
-          <div class="col-12">
+          <div class="col-12 p-0">
             <h5>Dashboard</h5>
             <h6 class="text-secondary">Hello , Ryan! check Out What's happening today!</h6>
           </div>
